# claude-code-Go

./: .gitignore  .goreleaser.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_ABOUT.md  GITHUB_TOPICS.txt  LICENSE  Makefile  PARITY.md  README.md  SECURITY.md  benchmark.html  community.html  docker-compose.yml  docs-inventory.html  feedback.html  go.mod  hashmap.json  index.html  install.ps1  install.sh  launch.sh  mkdocs.yml  pricing.html  privacy.html  project-audit.html  project-baseline.html  pyproject.toml  release-hygiene.html  roadmap.html  showcase.html  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
adr/: 001-agent-loop.html  002-permission-model.html  003-context-management.html  004-streaming-architecture.html  005-session-persistence.html
api/: commands.html  config.html  tools.html
architecture/: agent-loop.html  core-code-agent-loop.html  core-code-entry.html  deep-dive.html  design-philosophy.html  interactive-diagram.html  mcp.html  overview.html  providers.html  runtime-package-map.html  tools.html
assets/: adr_001-agent-loop.md.BKZjdAQU.js  adr_001-agent-loop.md.BKZjdAQU.lean.js  adr_001-agent-loop.md.BPE7fAh2.js  adr_001-agent-loop.md.BPE7fAh2.lean.js  adr_001-agent-loop.md.CUcFNA6f.js  adr_001-agent-loop.md.CUcFNA6f.lean.js  adr_001-agent-loop.md.CkP8xjhK.js  adr_001-agent-loop.md.CkP8xjhK.lean.js  adr_001-agent-loop.md.D5phIW2p.js  adr_001-agent-loop.md.D5phIW2p.lean.js  adr_001-agent-loop.md.DMILX0Rw.js  adr_001-agent-loop.md.DMILX0Rw.lean.js  adr_001-agent-loop.md.DTPqF-Bo.js  (+3753 more)
(+806 files in other folders)
