[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-harness"
version = "0.1.0"
description = "Python test harness for claude-code-Go"
readme = "harness/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "claude-code-Go contributors"}
]
keywords = ["testing", "harness", "claude", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
exclude = ["tests*", "docs*", "internal*", "cmd*", "pkg*"]

[tool.pytest.ini_options]
testpaths = ["harness"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
